Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjText.quorum
class Main
    action Main
        text v = "text"
        Test(v)
    end

    action Test(Text var)
    end
end
